Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I454de116b97e0c4d3e0ea820c1c02e23a438af95

--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -2488,7 +2488,7 @@
     <string name="battery_missing_link_message" msgid="6021565067124898074"></string>
     <string name="battery_missing_link_a11y_message" msgid="3310971406602316323">"יש להקיש לקבלת מידע נוסף על השגיאה הזו"</string>
     <string name="power_screen" msgid="4596900105850963806">"מסך"</string>
-    <string name="power_cpu" msgid="1820472721627148746">"‏(CPU) מעבד"</string>
+    <string name="power_cpu" msgid="1820472721627148746">"‏מעבד (CPU)"</string>
     <string name="power_flashlight" msgid="8993388636332573202">"פנס"</string>
     <string name="power_camera" msgid="4778315081581293923">"מצלמה"</string>
     <string name="power_gps" msgid="6352380895542498164">"GPS"</string>
