Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I7bb34378cecb16ddb9f073dc8965808fc18f8b03

--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -1123,7 +1123,7 @@
     <string name="build_number" msgid="9009733242117579826">"Konpilazio-zenbakia"</string>
     <string name="module_version" msgid="1787518340082046658">"Google Play-ren sistemaren eguneratzea"</string>
     <string name="device_info_not_available" msgid="4804474466616712326">"Ez dago erabilgarri"</string>
-    <string name="storage_settings" msgid="7472188817781592677">"Memoria"</string>
+    <string name="storage_settings" msgid="7472188817781592677">"Biltegiratzeko tokia"</string>
     <string name="storage_settings_for_app" msgid="229425418984637483">"Memoria eta cachea"</string>
     <string name="storage_settings_title" msgid="486118156723194815">"Memoriaren ezarpenak"</string>
     <string name="status_eid" msgid="7532406028683438634">"EIDa"</string>
@@ -1347,7 +1347,7 @@
     <string name="mobile_no_provisioning_url" msgid="609462719893503773">"<xliff:g id="OPERATOR">%1$s</xliff:g> operadoreak ez du hornikuntza-webgune ezagunik"</string>
     <string name="mobile_insert_sim_card" msgid="3639245241283948038">"Sartu SIM txartela eta berrabiarazi"</string>
     <string name="mobile_connect_to_internet" msgid="8162654404357069060">"Konektatu Internetera"</string>
-    <string name="location_category_recent_location_requests" msgid="2205900488782832082">"Azken kokapen-eskaerak"</string>
+    <string name="location_category_recent_location_requests" msgid="2205900488782832082">"Azkenaldiko kokapen-eskaerak"</string>
     <string name="managed_profile_location_switch_title" msgid="1265007506385460066">"Laneko profilaren kokapena"</string>
     <string name="location_app_level_permissions" msgid="907206607664629759">"Aplikazioen kokapen-baimenak"</string>
     <string name="location_app_permission_summary_location_off" msgid="2711822936853500335">"Kokapena desaktibatuta dago"</string>
