--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -985,7 +985,7 @@
     <string name="color_mode_option_automatic" msgid="2281217686509980870">"גוון ניתן להתאמה"</string>
     <string name="brightness" msgid="6216871641021779698">"רמת בהירות"</string>
     <string name="auto_brightness_title" msgid="4239324728760986697">"בהירות אוטומטית"</string>
-    <string name="auto_brightness_description" msgid="6807117118142381193">"בהירות המסך תותאם באופן אוטומטי לסביבה ולפעילויות שלך. עדיין אפשר לכוונן את הבהירות באופן ידני באמצעות פס ההזזה, וכך הבהירות האוטומטית תותאם עם הזמן להעדפות שלך."</string>
+    <string name="auto_brightness_description" msgid="6807117118142381193">"בהירות המסך תותאם באופן אוטומטי לסביבה ולפעילויות שלך. עדיין אפשר לכוונן את הבהירות באופן ידני מפס ההזזה, ועם הזמן הבהירות האוטומטית תתבסס על ההעדפות שלך."</string>
     <string name="auto_brightness_summary_on" msgid="2748088951224387004">"פועל"</string>
     <string name="auto_brightness_summary_off" msgid="8077066192887677956">"כבויה"</string>
     <string name="display_white_balance_title" msgid="2624544323029364713">"הצגת איזון לבן"</string>
@@ -2527,7 +2527,7 @@
     <string name="data_usage_label_foreground" msgid="8782117644558473624">"בחזית"</string>
     <string name="data_usage_label_background" msgid="8862781660427421859">"ברקע"</string>
     <string name="data_usage_app_restricted" msgid="312065316274378518">"מוגבל"</string>
-    <string name="data_usage_disable_mobile" msgid="6183809500102606801">"לכבות את חבילת הגלישה?"</string>
+    <string name="data_usage_disable_mobile" msgid="6183809500102606801">"לכבות את השימוש בחבילת הגלישה?"</string>
     <string name="data_usage_disable_mobile_limit" msgid="1370147078938479538">"הגדרת מגבלת נתונים לנייד"</string>
     <string name="data_usage_disable_4g_limit" msgid="3084868504051520840">"‏הגדרת מגבלת נתונים של 4G"</string>
     <string name="data_usage_disable_3g_limit" msgid="8867555130268898044">"‏הגדרת מגבלת נתונים של 2G-3G"</string>
@@ -3184,9 +3184,9 @@
     <string name="lock_screen_notifs_redact_summary" msgid="1395483766035470612">"הצגת תוכן רגיש כשהמכשיר נעול"</string>
     <string name="lock_screen_notifs_redact_work" msgid="3833920196569208430">"התראות רגישות מפרופיל העבודה"</string>
     <string name="lock_screen_notifs_redact_work_summary" msgid="3238238380405430156">"הצגת תוכן רגיש מפרופיל העבודה כשהמכשיר נעול"</string>
-    <string name="lock_screen_notifications_summary_show" msgid="6540443483088311328">"הצגת תוכן ההתראות במלואו"</string>
-    <string name="lock_screen_notifications_summary_hide" msgid="7837303171531166789">"הצגת תוכן רגיש רק כשהמכשיר לא נעול"</string>
-    <string name="lock_screen_notifications_summary_disable" msgid="3388290397947365744">"לא להציג התראות בכלל"</string>
+    <string name="lock_screen_notifications_summary_show" msgid="6540443483088311328">"תוכן ההתראות יוצג במלואו"</string>
+    <string name="lock_screen_notifications_summary_hide" msgid="7837303171531166789">"לא יוצג תוכן רגיש במסך הנעילה"</string>
+    <string name="lock_screen_notifications_summary_disable" msgid="3388290397947365744">"לא יוצגו התראות בכלל"</string>
     <string name="lock_screen_notifications_interstitial_message" msgid="4688399629301178487">"איך להציג התראות במסך הנעילה?"</string>
     <string name="lock_screen_notifications_interstitial_title" msgid="1360388192096354315">"מסך נעילה"</string>
     <string name="lock_screen_notifications_summary_show_profile" msgid="8373401288962523946">"הצגת כל התוכן של התראות מהעבודה"</string>
@@ -4514,8 +4514,8 @@
     <string name="mobile_data_temp_using" msgid="5211002380149434155">"עושה שימוש זמני ב<xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"אין חיבור"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"אין חיבור אוטו\' לחבילת הגלישה"</string>
-    <string name="mobile_data_disable_title" msgid="8438714772256088913">"לכבות את חבילת הגלישה?"</string>
-    <string name="mobile_data_disable_message" msgid="7829414836454769970">"‏לא תהיה לך גישה לנתונים או לאינטרנט באמצעות <xliff:g id="CARRIER">%s</xliff:g>. אינטרנט יהיה זמין רק באמצעות Wi-Fi."</string>
+    <string name="mobile_data_disable_title" msgid="8438714772256088913">"לכבות את השימוש בחבילת הגלישה?"</string>
+    <string name="mobile_data_disable_message" msgid="7829414836454769970">"‏לא תהיה לך גישה לנתונים או לאינטרנט דרך <xliff:g id="CARRIER">%s</xliff:g>. אפשר יהיה לגשת לאינטרנט רק דרך Wi-Fi."</string>
     <string name="mobile_data_disable_message_default_carrier" msgid="4449469407705838612">"הספק שלך"</string>
     <string name="not_allowed_by_ent" msgid="1958611623122304411">"הארגון שלך לא מתיר את האפשרות הזו"</string>
     <string name="aware_summary_when_bedtime_on" msgid="2063856008597376344">"אינו זמין כאשר מצב שינה מופעל"</string>
