--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -2091,7 +2091,7 @@
     <string name="enable_service_title" msgid="7231533866953706788">"ଆପଣଙ୍କ ଡିଭାଇସର ସମ୍ପୂର୍ଣ୍ଣ ନିୟନ୍ତ୍ରଣ କରିବାକୁ <xliff:g id="SERVICE">%1$s</xliff:g>କୁ ଅନୁମତି ଦେବେ?"</string>
     <string name="capabilities_list_title" msgid="1225853611983394386">"<xliff:g id="SERVICE">%1$s</xliff:g> ଆବଶ୍ୟକ କରେ:"</string>
     <string name="touch_filtered_warning" msgid="4225815157460318241">"ଗୋଟିଏ ଆପ ଏକ ଅସ୍ପଷ୍ଟ ଅନୁରୋଧକୁ ଅଣଦେଖା କରୁଥିବା ଯୋଗୁଁ, ସେଟିଂସ ଆପଣଙ୍କ ଉତ୍ତରକୁ ଯାଞ୍ଚ କରିପାରିବ ନାହିଁ।"</string>
-    <string name="accessibility_service_warning" msgid="6779187188736432618">"<xliff:g id="SERVICE">%1$s</xliff:g>, ଏହି ଡିଭାଇସ୍‌ର ସମ୍ପୂର୍ଣ୍ଣ ନିୟନ୍ତ୍ରଣ ଅନୁରୋଧ କରୁଛି। ଏହି ସେବା, ସ୍କ୍ରିନ୍‌ ପଢିପାରିବ ଏବଂ ଆକ୍ସେସିବିଲିଟୀ ଆବଶ୍ୟକତା ଅନୁଯାୟୀ ଉପଯୋଗକର୍ତ୍ତା ତରଫରୁ କାର୍ଯ୍ୟ କରିପାରିବ। ଅଧିକାଂଶ ଆପ୍‌ ପାଇଁ ଏହି ସ୍ତରର ନିୟନ୍ତ୍ରଣ ସଠିକ୍‌ ନୁହେଁ।"</string>
+    <string name="accessibility_service_warning" msgid="6779187188736432618">"<xliff:g id="SERVICE">%1$s</xliff:g>, ଏହି ଡିଭାଇସର ସମ୍ପୂର୍ଣ୍ଣ ନିୟନ୍ତ୍ରଣ ଅନୁରୋଧ କରୁଛି। ଏହି ସେବା, ସ୍କ୍ରିନ ପଢ଼ିପାରିବ ଏବଂ ଆକ୍ସେସିବିଲିଟି ଆବଶ୍ୟକତା ଅନୁଯାୟୀ ୟୁଜର ତରଫରୁ କାର୍ଯ୍ୟ କରିପାରିବ। ଅଧିକାଂଶ ଆପ ପାଇଁ ଏହି ସ୍ତରର ନିୟନ୍ତ୍ରଣ ସଠିକ୍ ନୁହେଁ।"</string>
     <string name="accessibility_service_warning_description" msgid="6573203795976134751">"ଯେଉଁ ଆପ୍ସ ଆପଣଙ୍କୁ ଆକ୍ସେସିବିଲିଟୀ ଆବଶ୍ୟକତାରେ ସହାୟତା କରେ, ସେହି ଆପ୍ସ ପାଇଁ ସମ୍ପୂର୍ଣ୍ଣ ନିୟନ୍ତ୍ରଣ ଉପଯୁକ୍ତ ଅଟେ, କିନ୍ତୁ ଅଧିକାଂଶ ଆପ୍ସ ପାଇଁ ଉପଯୁକ୍ତ ନୁହେଁ।"</string>
     <string name="accessibility_service_screen_control_title" msgid="324795030658109870">"ସ୍କ୍ରିନକୁ ଦେଖନ୍ତୁ ଏବଂ ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
     <string name="accessibility_service_screen_control_description" msgid="8431940515157990426">"ଏହା ସ୍କ୍ରିନ୍‍ର ସମସ୍ତ ବିଷୟବସ୍ତୁ ପଢ଼ିପାରେ ଏବଂ ଅନ୍ୟ ଆପ୍ସରେ ବିଷୟବସ୍ତୁ ପ୍ରଦର୍ଶନ କରିପାରେ।"</string>
@@ -2464,7 +2464,7 @@
     <string name="device_admin_status" msgid="6332571781623084064">"ଏହି ଆଡମିନ୍‌ ଆପ୍‌ ସକ୍ରିୟ ଅଛି ଏବଂ <xliff:g id="APP_NAME">%1$s</xliff:g> ଆପ୍‌ ଦ୍ୱାରା ନିମ୍ନଲିଖିତ କାର୍ଯ୍ୟଗୁଡ଼ିକ କରାଉଛି:"</string>
     <string name="profile_owner_add_title" msgid="2774489881662331549">"ପ୍ରୋଫାଇଲ୍‌ ମ୍ୟାନେଜର୍‌ ସକ୍ରିୟ କରିବେ?"</string>
     <string name="profile_owner_add_title_simplified" msgid="2320828996993774182">"ନିରୀକ୍ଷଣ ପାଇଁ ଅନୁମତି ଦେବେ?"</string>
-    <string name="adding_profile_owner_warning" msgid="6868275476058020513">"ଆଗକୁ ବଢି, ଆପଣଙ୍କ ଉପଯୋଗକର୍ତ୍ତା ଆପଣଙ୍କର ଆଡମିନ ଦ୍ୱାରା ପରିଚାଳିତ ହେବ ଯିଏ ଆପଣଙ୍କ ବ୍ୟକ୍ତିଗତ ଡାଟା ସହିତ, ସମ୍ବନ୍ଧିତ ଡାଟା ମଧ୍ୟ ଷ୍ଟୋର କରି ପାରିବେ।\n\nଆପଣଙ୍କ ଆଡମିନର ନେଟୱାର୍କ କାର୍ଯ୍ୟକଳାପ ଏବଂ ଆପଣଙ୍କ ଡିଭାଇସର ଲୋକେସନ ସୂଚନା ସମେତ ସେଟିଂସ, ଆକ୍ସେସ, ଆପ୍ସ ଏବଂ ଏହି ଉପଯୋଗକର୍ତ୍ତାଙ୍କ ସହ ଜଡ଼ିତ ଡାଟା ତଦାରଖ କରିବା ତଥା ପରିଚାଳନା କରିବାର ଦକ୍ଷତା ଅଛି।"</string>
+    <string name="adding_profile_owner_warning" msgid="6868275476058020513">"ଜାରି ରଖି, ଆପଣଙ୍କ ୟୁଜର ଆପଣଙ୍କର ଆଡମିନ ଦ୍ୱାରା ପରିଚାଳିତ ହେବ ଯିଏ ଆପଣଙ୍କ ବ୍ୟକ୍ତିଗତ ଡାଟା ସହିତ ସମ୍ବନ୍ଧିତ ଡାଟା ମଧ୍ୟ ଷ୍ଟୋର କରିପାରିବେ।\n\nଆପଣଙ୍କ ଆଡମିନର ନେଟୱାର୍କ କାର୍ଯ୍ୟକଳାପ ଏବଂ ଆପଣଙ୍କ ଡିଭାଇସର ଲୋକେସନ ସୂଚନା ସମେତ ସେଟିଂସ, ଆକ୍ସେସ, ଆପ୍ସ ଏବଂ ଏହି ୟୁଜରଙ୍କ ସହ ସମ୍ୱନ୍ଧିତ ଡାଟା ମନିଟର କରିବା ତଥା ପରିଚାଳନା କରିବାର ଦକ୍ଷତା ଅଛି।"</string>
     <string name="admin_disabled_other_options" msgid="8122039047419172139">"ଆଡମିନ ଅକ୍ଷମ କରିଥିବା ଅନ୍ୟାନ୍ୟ ବିକଳ୍ପମାନ"</string>
     <string name="admin_more_details" msgid="4928985331640193758">"ଅଧିକ ଜାଣନ୍ତୁ"</string>
     <string name="notification_log_title" msgid="2812594935014664891">"ବିଜ୍ଞପ୍ତି ଲଗ୍‌"</string>
@@ -3867,7 +3867,7 @@
     <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"ShortcutManager ର ହାର-ସୀମିତକରଣ ରିସେଟ୍‌ କରିଦିଆଗଲା"</string>
     <string name="notification_suggestion_title" msgid="6309263655965785411">"ଲକ୍‌ ସ୍କ୍ରୀନ୍‌ ଉପରେ ନିୟନ୍ତ୍ରଣ ସମ୍ପର୍କିତ ବିଜ୍ଞପ୍ତି"</string>
     <string name="notification_suggestion_summary" msgid="7615611244249276113">"ବିଜ୍ଞପ୍ତି କଣ୍ଟେଣ୍ଟକୁ ଦେଖାନ୍ତୁ କିମ୍ୱା ଲୁଚାନ୍ତୁ"</string>
-    <string name="page_tab_title_support" msgid="3235725053332345773">"ଟିପ୍ସ ଓ ସହାୟତା"</string>
+    <string name="page_tab_title_support" msgid="3235725053332345773">"ଟିପ୍ସ ଓ ସପୋର୍ଟ"</string>
     <string name="developer_smallest_width" msgid="632354817870920911">"ସବୁଠାରୁ ଛୋଟ ଓସାର"</string>
     <string name="premium_sms_none" msgid="8737045049886416739">"ଇନ୍‌ଷ୍ଟଲ୍‌ ହୋଇଥିବା କୌଣସି ଆପ୍‌ ପ୍ରିମିୟମ୍‌ SMS ଆକସେସ୍‌ ଅନୁରୋଧ କରିନାହାଁନ୍ତି"</string>
     <string name="premium_sms_warning" msgid="2192300872411073324">"ପ୍ରିମିୟମ୍‌ SMSରେ ଆପଣଙ୍କୁ ଖର୍ଚ୍ଚ କରିବାକୁ ପଡ଼ିପାରେ ଏବଂ ତାହା ଆପଣଙ୍କର କେରିଅର୍‌ ବିଲ୍‌ରେ ଯୋଡ଼ି ହୋଇଯିବ। ଯଦି ଆପଣ ଗୋଟିଏ ଆପ୍‌ ପାଇଁ ଅନୁମତି ଦେଇଛନ୍ତି, ତେବେ ସେହି ଆପ୍‌ ବ୍ୟବହାର କରି ଆପଣ ପ୍ରିମିୟମ୍‌ SMS ପଠାଇପାରିବେ।"</string>
