--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1986,7 +1986,7 @@
     <string name="accessibility_daltonizer_footer_learn_more_content_description" msgid="2091679253892040910">"Подробнее о коррекции цвета…"</string>
     <string name="accessibility_color_inversion_about_title" msgid="8275754480247040136">"Об инверсии цветов"</string>
     <string name="accessibility_color_inversion_footer_learn_more_content_description" msgid="5382579548498952445">"Подробнее об инверсии цветов…"</string>
-    <string name="accessibility_captioning_primary_switch_title" msgid="3663677340286206100">"Показ субтитров"</string>
+    <string name="accessibility_captioning_primary_switch_title" msgid="3663677340286206100">"Субтитры"</string>
     <string name="accessibility_captioning_primary_switch_summary" msgid="2544094070306830218">"Только в поддерживаемых приложениях"</string>
     <string name="captioning_appearance_title" msgid="3128792092290011408">"Размер и стиль субтитров"</string>
     <string name="captioning_appearance_summary" msgid="4620682807315588019">"Размер шрифта: <xliff:g id="ACCESSIBILITY_FONT_SIZE">%1$s</xliff:g>"</string>
