--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -1763,7 +1763,7 @@
     <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"ஆப்ஸ் பெயரால் வரிசைப்படுத்துக"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"கடைசியாகப் பயன்படுத்தியது"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"பயன்படுத்திய நேரம்"</string>
-    <string name="accessibility_settings" msgid="4713215774904704682">"அணுகல்தன்மை"</string>
+    <string name="accessibility_settings" msgid="4713215774904704682">"மாற்றுத்திறன் வசதி"</string>
     <string name="accessibility_settings_title" msgid="6739115703615065716">"அணுகல்தன்மை அமைப்பு"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"காட்சி, உரையாடல், ஆடியோ"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"காட்சி அமைப்புகள்"</string>
@@ -2319,7 +2319,7 @@
     <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"மணிநேர பேட்டரி உபயோக விளக்கப்படம்"</string>
     <string name="battery_usage_breakdown_title_since_last_full_charge" msgid="435006273323199906">"கடைசியாக பேட்டரியை முழுவதுமாகச் சார்ஜ் செய்ததிலிருந்து அதன் உபயோகம் குறித்த விவரம்"</string>
     <string name="battery_usage_breakdown_title_for_slot" msgid="4823179483667671406">"<xliff:g id="SLOT">%s</xliff:g>க்கான பேட்டரி உபயோகம்"</string>
-    <string name="screen_time_category_last_full_charge" msgid="8856908320256057753">"கடைசியாக முழுமையாகச் சார்ஜ் செய்யப்பட்டதிலிருந்து சாதனத்தைப் பயன்படுத்திய நேரம்"</string>
+    <string name="screen_time_category_last_full_charge" msgid="8856908320256057753">"கடைசி முழு சார்ஜிற்குப் பின்னர் பயன்படுத்திய நேரம்"</string>
     <string name="screen_time_category_for_slot" msgid="8287722270554654959">"<xliff:g id="SLOT">%s</xliff:g>க்கான சாதன உபயோக நேரம்"</string>
     <string name="battery_usage_spinner_view_by_apps" msgid="8769276544072098082">"ஆப்ஸ் வாரியாகக் காட்டு"</string>
     <string name="battery_usage_spinner_view_by_systems" msgid="7904104223212160541">"சிஸ்டங்கள் வாரியாகக் காட்டு"</string>
