--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -2442,11 +2442,11 @@
     <string name="include_app_data_title" msgid="2969603876620594523">"Συμπερίληψη δεδομ. εφαρμογής"</string>
     <string name="auto_restore_title" msgid="4124345897936637561">"Αυτόματη επαναφορά"</string>
     <string name="auto_restore_summary" msgid="6830198851045584001">"Σε νέα εγκατάσταση εφαρμογής, να γίνεται ανάκτηση ρυθμίσεων/δεδομένων από αντίγραφα ασφαλείας"</string>
-    <string name="backup_inactive_title" msgid="6753265378043349277">"Η δημιουργία αντιγράφων ασφαλείας δεν είναι ενεργή"</string>
+    <string name="backup_inactive_title" msgid="6753265378043349277">"Η δημιουργία αντιγράφου ασφαλείας δεν είναι ενεργή"</string>
     <string name="backup_configure_account_default_summary" msgid="5323225330966306690">"Κανένας λογαριασμός δεν αποθηκεύει αντίγραφα ασφαλείας"</string>
     <string name="backup_erase_dialog_title" msgid="5892431263348766484"></string>
-    <string name="backup_erase_dialog_message" msgid="2250872501409574331">"Θέλετε να διακοπεί η δημιουργία αντιγράφων ασφαλείας για τους κωδικούς πρόσβασης Wi-Fi, τους σελιδοδείκτες και τις άλλες ρυθμίσεις και τα δεδομένα εφαρμογών και να διαγραφούν όλα τα αντίτυπα από τους διακομιστές της Google;"</string>
-    <string name="fullbackup_erase_dialog_message" msgid="2379053988557486162">"Να διακοπεί η δημιουργία αντιγράφων ασφαλείας για τα δεδομένα συσκευών (όπως είναι οι κωδικοί πρόσβασης Wi-Fi και το ιστορικό κλήσεων) και τα δεδομένα εφαρμογών (όπως είναι οι ρυθμίσεις και τα αρχεία που αποθηκεύουν οι εφαρμογές) και να διαγραφούν όλα τα αντίτυπα από τους απομακρυσμένους διακομιστές;"</string>
+    <string name="backup_erase_dialog_message" msgid="2250872501409574331">"Θέλετε να διακοπεί η δημιουργία αντιγράφου ασφαλείας για τους κωδικούς πρόσβασης Wi-Fi, τους σελιδοδείκτες και τις άλλες ρυθμίσεις και τα δεδομένα εφαρμογών και να διαγραφούν όλα τα αντίτυπα από τους διακομιστές της Google;"</string>
+    <string name="fullbackup_erase_dialog_message" msgid="2379053988557486162">"Να διακοπεί η δημιουργία αντιγράφου ασφαλείας για τα δεδομένα συσκευών (όπως είναι οι κωδικοί πρόσβασης Wi-Fi και το ιστορικό κλήσεων) και τα δεδομένα εφαρμογών (όπως είναι οι ρυθμίσεις και τα αρχεία που αποθηκεύουν οι εφαρμογές) και να διαγραφούν όλα τα αντίτυπα από τους απομακρυσμένους διακομιστές;"</string>
     <string name="fullbackup_data_summary" msgid="971587401251601473">"Δημιουργήστε αντίγραφα ασφαλείας για τα δεδομένα της συσκευής σας (όπως τους κωδικούς Wi-Fi και το ιστορικό κλήσεων) και τα δεδομένα εφαρμογών (όπως ρυθμίσεις και αρχεία που έχουν αποθηκευτεί από τις εφαρμογές) απομακρυσμένα και αυτόματα.\n\nΜε την ενεργοποίηση της αυτόματης δημιουργίας αντιγράφων ασφαλείας, τα δεδομένα της συσκευής και των εφαρμογών αποθηκεύονται απομακρυσμένα περιοδικά. Τα δεδομένα εφαρμογών μπορεί να είναι διαφόρων ειδών δεδομένα τα οποία έχουν αποθηκευτεί από κάποια εφαρμογή (ανάλογα με τις ρυθμίσεις του προγραμματιστή), συμπεριλαμβανομένων δυνητικά ευαίσθητων δεδομένων, όπως επαφών, μηνυμάτων και φωτογραφιών."</string>
     <string name="device_admin_settings_title" msgid="31392408594557070">"Ρυθμίσεις διαχειριστή συσκευής"</string>
     <string name="active_device_admin_msg" msgid="7744106305636543184">"Εφαρμογή διαχειριστή συσκευής"</string>
@@ -2862,7 +2862,7 @@
     <string name="cloned_app_created_summary" msgid="7277912971544890710">"Αντιγράφηκε"</string>
     <string name="cloned_app_creation_toast_summary" msgid="3854494347144867870">"Δημιουργείται κλώνος της εφαρμογής <xliff:g id="PACKAGE_LABEL">%1$s</xliff:g>"</string>
     <string name="cloned_app_created_toast_summary" msgid="755225403495544163">"Δημιουργήθηκε κλώνος της εφαρμογής <xliff:g id="PACKAGE_LABEL">%1$s</xliff:g>"</string>
-    <string name="system_dashboard_summary" msgid="7400745270362833832">"Γλώσσα, κινήσεις, ώρα, δημιουργία αντιγράφων ασφαλείας"</string>
+    <string name="system_dashboard_summary" msgid="7400745270362833832">"Γλώσσα, κινήσεις, ώρα, δημιουργία αντιγράφου ασφαλείας"</string>
     <string name="languages_setting_summary" msgid="7963053736715746726">"Γλώσσες συστήματος, γλώσσες εφαρμογών, ομιλία"</string>
     <string name="keywords_wifi" msgid="8156528242318351490">"wifi, wi-fi, σύνδεση δικτύου, διαδίκτυο, ασύρματο, δεδομένα, wi fi"</string>
     <string name="keywords_wifi_notify_open_networks" msgid="6580896556389306636">"ειδοποίηση Wi‑Fi, ειδοποίηση wifi"</string>
@@ -4402,7 +4402,7 @@
     <string name="wifi_calling_summary" msgid="8566648389959032967">"Χρήση Wi‑Fi για κλήσεις για βελτίωση της ποιότητας"</string>
     <string name="backup_calling_settings_title" msgid="519714752900364326">"Δημιουργία αντιγράφων ασφαλείας κλήσεων"</string>
     <string name="backup_calling_setting_summary" msgid="599493254305348733">"Όταν δεν είναι διαθέσιμο το <xliff:g id="BACKUP_CALLING_OPERATOR_TEXT">%1$s</xliff:g> ή κατά την περιαγωγή, χρησιμοπ. SIM δεδομένων κιν. τηλεφ. για κλήσεις <xliff:g id="BACKUP_CALLING_CARRIER_TEXT">%1$s</xliff:g>."</string>
-    <string name="keywords_backup_calling" msgid="8592800915478816800">"δημιουργία αντιγράφων ασφαλείας κλήσεων"</string>
+    <string name="keywords_backup_calling" msgid="8592800915478816800">"δημιουργία αντιγράφου ασφαλείας κλήσεων"</string>
     <string name="enable_receiving_mms_notification_title" msgid="6465218559386990248">"Εισερχόμενο μήνυμα MMS"</string>
     <string name="enable_sending_mms_notification_title" msgid="7120641300854953375">"Αδυναμία αποστολής μηνύματος MMS"</string>
     <string name="enable_mms_notification_summary" msgid="6432752438276672500">"Πατήστε για να επιτρέψετε τα μηνύματα MMS στο <xliff:g id="OPERATOR_NAME">%1$s</xliff:g> όταν τα δεδομένα κιν. τηλεφ. είναι απενεργοποιημένα"</string>
